--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 								<!-- <div class="profile-thumb" style="background: url(images/user-3.jpg);"></div> -->
 								<h1><span>Manivasagan P</span></h1>
 								<h2><span>Devops Engineer</span></h2>
-								<a href="mailto:namachissnv@gmail.com?subject=Regarding%20Job%20opportunity"
+								<a href="mailto:manibca2020gmail.com?subject=Regarding%20Job%20opportunity"
 									class="hire-me-button">Hire me</a>
 								<a href="files/resume.pdf" class="download-resume-button" target="_blank">Download
 									resume</a>
@@ -112,7 +112,7 @@
 										class="icon-linkedin2"></i></a></li>
 							<li><a href="https://api.whatsapp.com/send?phone=7708439496" target="_blank"><i
 										class="icon-whatsapp"></i></a></li>
-							<li><a href="mailto:namachissnv@gmail.com?subject=Regarding%20Job%20opportunity"
+							<li><a href="mailto:manibca2020gmail.com?subject=Regarding%20Job%20opportunity"
 									target="_blank"><i class="icon-email"></i></a></li>
 						</ul>
 						</p>
